--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,13 @@ python:
   - "3.5"
 
 node_js:
-  - "0.10"
+  - 'node'
 
+env:
+  - TRAVIS_NODE_VERSION="6"
 
-
+install:
+  - rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && (cd ~/.nvm && git checkout `git describe --abbrev=0 --tags`) && source ~/.nvm/nvm.sh && nvm install $TRAVIS_NODE_VERSION
+  - npm install
+  
 script: "./build ci"
