--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jshint": "~2.9.1",
     "mustache": "~2.2.1",
     "node-static": "~0.7.1",
+    "requirejs": "^2.3.3",
     "webpack": "^2.2.1"
   }
 }
